src/test/deca/codegen/invalid/class-champs/use_uninit.deca
// Description:
//    Utilisation d'un objet non initializé
//
// Resultats:
//    Erreur deref null
//
// Historique:
//    cree le 01/01/2022

class A {
    int x = 1;
}

{
    int z;
    z=1;
    println(z);
}